# aquaproj-aqua-py

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml  update-aqua.yml
scripts/: tag_from_pyproject.py  update_aqua.py
