# Project metadata now lives in pyproject.toml ([project]).
# This file only retains the setuptools-download command configuration, which
# is a setuptools *command* option and cannot currently be expressed in
# pyproject.toml. scripts/generate_downloads.py regenerates the section below.
[setuptools_download]
download_scripts =
    [aqua]
    group = aqua-binary
    marker = sys_platform == "linux" and platform_machine == "aarch64"
    url = https://github.com/aquaproj/aqua/releases/download/v2.61.0/aqua_linux_arm64.tar.gz
    sha256 = a88cba108ad9a0e780d2ce93738dc7bdf338fe6afee756bd22124965b4d46d67
    extract = tar
    extract_path = aqua
    [aqua]
    group = aqua-binary
    marker = sys_platform == "linux" and platform_machine == "x86_64"
    url = https://github.com/aquaproj/aqua/releases/download/v2.61.0/aqua_linux_amd64.tar.gz
    sha256 = 562cc2b8f2faaa4b575a131a92048c5590d77645b4a556e954c411b747cec95b
    extract = tar
    extract_path = aqua
    [aqua]
    group = aqua-binary
    marker = sys_platform == "darwin" and platform_machine == "arm64"
    url = https://github.com/aquaproj/aqua/releases/download/v2.61.0/aqua_darwin_arm64.tar.gz
    sha256 = a18ae78c2d8b407dba4da87a49beddfd738eb58f81f6dc232137193bb00c5101
    extract = tar
    extract_path = aqua
    [aqua]
    group = aqua-binary
    marker = sys_platform == "darwin" and platform_machine == "x86_64"
    url = https://github.com/aquaproj/aqua/releases/download/v2.61.0/aqua_darwin_amd64.tar.gz
    sha256 = d0bda296a83836e428158454a2a5a93b85ab24a7dbc681cdde2f3b296db12266
    extract = tar
    extract_path = aqua
    [aqua.exe]
    group = aqua-binary
    marker = sys_platform == "win32" and platform_machine == "AMD64"
    marker = sys_platform == "cygwin" and platform_machine == "x86_64"
    url = https://github.com/aquaproj/aqua/releases/download/v2.61.0/aqua_windows_amd64.zip
    sha256 = 8c2feb6c8e579b1f66a45717aa131bc35f530918ac7b71fc639e068be9fcaa2f
    extract = zip
    extract_path = aqua.exe
    [aqua.exe]
    group = aqua-binary
    marker = sys_platform == "win32" and platform_machine == "ARM64"
    marker = sys_platform == "cygwin" and platform_machine == "aarch64"
    url = https://github.com/aquaproj/aqua/releases/download/v2.61.0/aqua_windows_arm64.zip
    sha256 = f0cd806c8fb3919775dbdec6641918459f0e380922d2bf67c297dc3aeab1030b
    extract = zip
    extract_path = aqua.exe
