# Project metadata now lives in pyproject.toml ([project]).
# This file only retains the setuptools-download command configuration, which
# is a setuptools *command* option and cannot currently be expressed in
# pyproject.toml. scripts/generate_downloads.py regenerates the section below.
[setuptools_download]
download_scripts =
    [aqua]
    group = aqua-binary
    marker = sys_platform == "linux" and platform_machine == "aarch64"
    url = https://github.com/aquaproj/aqua/releases/download/v2.62.0/aqua_linux_arm64.tar.gz
    sha256 = 217f8b8420dfb50ba1f834be04b72f6380dc7509acba54bc35ed378a07deb5b0
    extract = tar
    extract_path = aqua
    [aqua]
    group = aqua-binary
    marker = sys_platform == "linux" and platform_machine == "x86_64"
    url = https://github.com/aquaproj/aqua/releases/download/v2.62.0/aqua_linux_amd64.tar.gz
    sha256 = 6f0312fb61a05001ac8c09b7029edc18185e943549760c3fe334977dd76da8dc
    extract = tar
    extract_path = aqua
    [aqua]
    group = aqua-binary
    marker = sys_platform == "darwin" and platform_machine == "arm64"
    url = https://github.com/aquaproj/aqua/releases/download/v2.62.0/aqua_darwin_arm64.tar.gz
    sha256 = b4835f6a8c2aa1496c23820ddb7dd558bbfc5f95b42410acdb496950a90aa34a
    extract = tar
    extract_path = aqua
    [aqua]
    group = aqua-binary
    marker = sys_platform == "darwin" and platform_machine == "x86_64"
    url = https://github.com/aquaproj/aqua/releases/download/v2.62.0/aqua_darwin_amd64.tar.gz
    sha256 = ee35d9be32b6af7c3910adb1b491a226a21e44e69007de54abe01043680150b2
    extract = tar
    extract_path = aqua
    [aqua.exe]
    group = aqua-binary
    marker = sys_platform == "win32" and platform_machine == "AMD64"
    marker = sys_platform == "cygwin" and platform_machine == "x86_64"
    url = https://github.com/aquaproj/aqua/releases/download/v2.62.0/aqua_windows_amd64.zip
    sha256 = 22fd5ddaa771478f8e3aa0d62d61e6cbd3f4fb6d894a4d7acab725bef7eb2dbd
    extract = zip
    extract_path = aqua.exe
    [aqua.exe]
    group = aqua-binary
    marker = sys_platform == "win32" and platform_machine == "ARM64"
    marker = sys_platform == "cygwin" and platform_machine == "aarch64"
    url = https://github.com/aquaproj/aqua/releases/download/v2.62.0/aqua_windows_arm64.zip
    sha256 = 7629b5cb596a0f41b063e8a872648cb4e21b75860e7cd925724fe6e27840758a
    extract = zip
    extract_path = aqua.exe
