# Project metadata now lives in pyproject.toml ([project]).
# This file only retains the setuptools-download command configuration, which
# is a setuptools *command* option and cannot currently be expressed in
# pyproject.toml. scripts/generate_downloads.py regenerates the section below.
[setuptools_download]
download_scripts =
    [aqua]
    group = aqua-binary
    marker = sys_platform == "linux" and platform_machine == "aarch64"
    url = https://github.com/aquaproj/aqua/releases/download/v2.62.1/aqua_linux_arm64.tar.gz
    sha256 = bbfd9733d85e807049e66a256499d2f30f83d910d928e2f4bfa8a05f4626644d
    extract = tar
    extract_path = aqua
    [aqua]
    group = aqua-binary
    marker = sys_platform == "linux" and platform_machine == "x86_64"
    url = https://github.com/aquaproj/aqua/releases/download/v2.62.1/aqua_linux_amd64.tar.gz
    sha256 = ddbbc4d737de5836467cf80eb316e3c468c74012c134fe2799ac37d95d3ca7b8
    extract = tar
    extract_path = aqua
    [aqua]
    group = aqua-binary
    marker = sys_platform == "darwin" and platform_machine == "arm64"
    url = https://github.com/aquaproj/aqua/releases/download/v2.62.1/aqua_darwin_arm64.tar.gz
    sha256 = 503951fae771c8c6fb9467346339afa71a5756afc997e6f19ea9856ae83dbb0e
    extract = tar
    extract_path = aqua
    [aqua]
    group = aqua-binary
    marker = sys_platform == "darwin" and platform_machine == "x86_64"
    url = https://github.com/aquaproj/aqua/releases/download/v2.62.1/aqua_darwin_amd64.tar.gz
    sha256 = d75468ef1ba8c7d23be6e9fc8b30882a561cc91c79163162679022d369c1c2c5
    extract = tar
    extract_path = aqua
    [aqua.exe]
    group = aqua-binary
    marker = sys_platform == "win32" and platform_machine == "AMD64"
    marker = sys_platform == "cygwin" and platform_machine == "x86_64"
    url = https://github.com/aquaproj/aqua/releases/download/v2.62.1/aqua_windows_amd64.zip
    sha256 = e283911dd8def160ac85c15140790033f7668bd765a551f6d32a21b066322684
    extract = zip
    extract_path = aqua.exe
    [aqua.exe]
    group = aqua-binary
    marker = sys_platform == "win32" and platform_machine == "ARM64"
    marker = sys_platform == "cygwin" and platform_machine == "aarch64"
    url = https://github.com/aquaproj/aqua/releases/download/v2.62.1/aqua_windows_arm64.zip
    sha256 = 9398024ab265e1916c71237b6de2c3fc61f2bb0349108cf80d2183cbc31b11a5
    extract = zip
    extract_path = aqua.exe
